--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@stomp/stompjs": "^7.0.0",
+    "babel-plugin-macros": "^3.1.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
