--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@stomp/stompjs": "^7.0.0",
     "babel-plugin-macros": "^3.1.0",
-    "next": "latest",
+    "next": "^14.2.2",
     "react": "latest",
     "react-dom": "latest",
     "sockjs-client": "^1.6.1"
